# kdtree

./: CMakeLists.txt  README.md  db.txt  kdtree.h  main.cpp  run.sh  sample.txt  test.cpp  vectorizar.h
CImg/: README.txt
